[package]
name = "example"
version = "0.1.0"
authors = ["Johan Smits <johan@smitsmail.net>"]
readme = "README.md"
publish = false
edition = "2021"

[dependencies]
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
surrealdb = "2.1.2"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
